--- a/src/index.css
+++ b/src/index.css
@@ -1,68 +1,65 @@
 :root {
-  font-family: Inter, system-ui, Avenir, Helvetica, Arial, sans-serif;
-  line-height: 1.5;
-  font-weight: 400;
-
-  color-scheme: light dark;
-  color: rgba(255, 255, 255, 0.87);
-  background-color: #242424;
-
-  font-synthesis: none;
-  text-rendering: optimizeLegibility;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+  text-align: left;
 }
-
-a {
-  font-weight: 500;
-  color: #646cff;
-  text-decoration: inherit;
-}
-a:hover {
-  color: #535bf2;
-}
-
 body {
   margin: 0;
   display: flex;
   place-items: center;
   min-width: 320px;
   min-height: 100vh;
+  background-color: #e4ebf5;
+  font-family: Inter, system-ui, Avenir, Helvetica, Arial, sans-serif;
+  color: #9baacf;
 }
 
-h1 {
-  font-size: 3.2em;
-  line-height: 1.1;
+input:focus,
+select:focus {
+  border-color: transparent;
+  outline: none;
 }
 
-button {
-  border-radius: 8px;
-  border: 1px solid transparent;
-  padding: 0.6em 1.2em;
-  font-size: 1em;
-  font-weight: 500;
+.card {
+  width: 70%;
+  border-radius: 1rem;
+  box-shadow: 0.8rem 0.8rem 1.4rem #c8d0e7, -0.2rem -0.2rem 1.8rem #fff;
+  padding: 4rem;
+  align-items: center;
+}
+
+.search__input {
+  width: 85%;
+  height: 2rem;
+  border: none;
+  border-radius: 0.4rem;
+  box-shadow: inset 0.1rem 0.1rem 0.3rem #c8d0e7, inset -0.1rem -0.1rem 0.3rem #fff;
+  background: none;
   font-family: inherit;
-  background-color: #1a1a1a;
-  cursor: pointer;
-  transition: border-color 0.25s;
-}
-button:hover {
-  border-color: #646cff;
-}
-button:focus,
-button:focus-visible {
-  outline: 4px auto -webkit-focus-ring-color;
+  color: #9baacf;
+  padding-left: 10px;
 }
 
-@media (prefers-color-scheme: light) {
-  :root {
-    color: #213547;
-    background-color: #ffffff;
-  }
-  a:hover {
-    color: #747bff;
-  }
-  button {
-    background-color: #f9f9f9;
-  }
+.btn {
+  width: 90%;
+  height: 2rem;
+  border-radius: 0.4rem;
+  /* box-shadow: 0.3rem 0.3rem 0.6rem #c8d0e7, -0.2rem -0.2rem 0.5rem #fff; */
+  box-shadow: 0.1rem 0.1rem 0.1rem #c8d0e7, -0.1rem -0.1rem 0.3rem #fff;
+  /* justify-self: center;
+  display: flex;
+  align-items: center;
+  justify-content: center; */
+  cursor: pointer;
+  transition: 0.3s ease;
+  color: #9baacf;
+  background: none;
+  border: none;
+  margin-bottom: 10px;
+  padding-left: 10px;
+  padding-right: 10px;
+}
+
+.amount {
+  text-align: left;
+  padding-left: 10px;
+  margin-bottom: 5px;
 }
