--- a/src/index.css
+++ b/src/index.css
@@ -26,6 +26,13 @@ select:focus {
   align-items: center;
 }
 
+.box {
+  display: flex;
+  flex-direction: column;
+
+  margin-bottom: 5px;
+}
+
 .search__input {
   width: 85%;
   height: 2rem;
@@ -38,28 +45,39 @@ select:focus {
   padding-left: 10px;
 }
 
-.btn {
+.select {
   width: 90%;
   height: 2rem;
   border-radius: 0.4rem;
-  /* box-shadow: 0.3rem 0.3rem 0.6rem #c8d0e7, -0.2rem -0.2rem 0.5rem #fff; */
   box-shadow: 0.1rem 0.1rem 0.1rem #c8d0e7, -0.1rem -0.1rem 0.3rem #fff;
-  /* justify-self: center;
-  display: flex;
-  align-items: center;
-  justify-content: center; */
   cursor: pointer;
   transition: 0.3s ease;
   color: #9baacf;
   background: none;
   border: none;
-  margin-bottom: 10px;
+
   padding-left: 10px;
   padding-right: 10px;
 }
 
-.amount {
+.title {
+  font-size: 16px;
+  margin-bottom: 20px;
+}
+
+.label {
   text-align: left;
-  padding-left: 10px;
-  margin-bottom: 5px;
+  font-size: 12px;
+  margin-bottom: 4px;
+}
+
+.result {
+  font-size: 26px;
+  font-weight: bold;
+  text-align: center;
+  margin-top: 20px;
+}
+
+.updated_time {
+  font-size: 11px;
 }
